--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,13 +1,36 @@
 .body{
+    font-size: 13;
+    font-family: Arial;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100;
-    background-color: slategray;
-    color: white;
+    height: 100%;
+    background-color: white;
+    color: black;
 }
 
 .heading1{
     text-align: center;
+}
+
+.paragraph{
+    text-align: center;
+}
+
+.buttons{
+    position: relative;
+    left: 37.5%;
+    text-align: center;
+    background: #339999;
+    color:  #ccffff;
+    width: 25%;
+    height: 15%;
+    font-size: xx-large;
+}
+
+.buttons:hover{
+    background-color: white;
+    color: rgb(64, 75, 72);
+    border: 2px solid rgb(64, 75, 72);
 }
