--- a/app/components/DragDrop.css
+++ b/app/components/DragDrop.css
@@ -1,5 +1,11 @@
-.trash{
+:local(.trash){
     width: 5%;
     height: 5%;
     border: 1px solid black;
+}
+
+:local(.testImage){
+    position: relative;
+    left: 5%;
+    bottom: 5%;
 }
