--- a/app/styles/editor.css
+++ b/app/styles/editor.css
@@ -105,8 +105,14 @@
     position: relative;
     top: 5%;
     left: 5%;
-    width: 90%;
-    height: 20%;
+    width: 150px;
+    height: 100px;
+}
+
+:local(.images){
+    position: relative;
+    height: 180%;
+    width: 100%;
 }
 
 /*Editor Tools:*/
