--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,12 +1,12 @@
 :local(.body){
-    font-size: 13;
-    font-family: Arial;
+    font-size: 23px;
+    font-family: 'Lucida Sans';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #F7F7F7;
     color: black;
 }
 
